# foxtrot

./: .env.example  .gitignore  .mcp.json  =0.21.0  CLAUDE.md  GEMINI.md  README.md  pyproject.toml  pytest.ini  run_tests.py  run_tui.py  test_adapter_functionality.py  test_import.py  test_key.txt  test_tui_integration.py  test_tui_simple.py  vt_setting.json
.taskmaster/: config.json  state.json
.taskmaster/docs/: tui_implementation_status.md  tui_next_session_guide.md
.taskmaster/reports/: compliance-audit-review-report.md
.taskmaster/tasks/: task_001.txt  task_002.txt  task_003.txt  task_004.txt  task_005.txt  task_006.txt  task_007.txt  task_008.txt  task_009.txt  task_010.txt  task_011.txt  task_012.txt  task_013.txt  task_014.txt  task_015.txt  task_016.txt  task_017.txt  task_018.txt  task_019.txt  task_020.txt  task_021.txt  task_022.txt  task_023.txt  task_024.txt  task_027.txt  task_030.txt  task_031.txt  task_032.txt  task_033.txt  task_034.txt  task_035.txt  task_036.txt  tasks.json
benchmarks/: websocket_vs_http.py
claude-instance/: INVESTIGATION_REPORT.md
docs/: ROADMAP.md  code-review-interactive-trading-interface.md  testing-guide.md  websocket_configuration.md
docs/archive/claude-improvement/: implementation-roadmap.md  testing-strategy-plan.md
docs/archive/gemini-plan/: refactor_binance_adapter_plan.md
docs/archive/gemini-plans/: detailed_improvement_plan.md  foxtrot_vs_nautilus_trader_comparison.md
docs/claude-instance-consolidation/: FLOW_REPORT.md  INVESTIGATION_REPORT.md  PLAN.md
docs/claude/claude-futu-1753907912/: FLOW_REPORT.md  INVESTIGATION_REPORT.md  PLAN.md
docs/claude/claude-instance/: FLOW_REPORT.md  INVESTIGATION_REPORT.md  PLAN.md
docs/claude/claude-instance-001/: CONTEXT.md  FLOW_REPORT.md  INVESTIGATION_REPORT.md  PLAN.md
docs/claude/claude-instance-websocket-design/: FLOW_REPORT.md  INVESTIGATION_REPORT.md  PLAN.md  TODO.md
docs/claude/claude-logging/: FLOW_REPORT.md  INVESTIGATION_REPORT.md  PLAN.md
docs/claude/claude-test-fixes-1753952587/: FLOW_REPORT.md  INVESTIGATION_REPORT.md  PLAN.md
docs/claude/claude-tests-1753950690/: add_timeouts.py
docs/claude/improvement/: error-handling-plan.md  master-plan.md  performance-monitoring-plan.md  rejected-suggestions.md  risk-management-plan.md  state-management-plan.md
docs/claude/instance-tui-1753879308/: FLOW_REPORT.md  INVESTIGATION_REPORT.md  PLAN.md
docs/claude/instance-tui-1753892187/: FLOW_REPORT.md  INVESTIGATION_REPORT.md  PLAN.md
docs/claude/instance-unittest/: FLOW_REPORT.md  INVESTIGATION_REPORT.md  PLAN.md
docs/claude/master-plan/: EXECUTIVE_SUMMARY.md  MASTER_PLAN.md
docs/claude/nautilus-comprehensive-analysis/: FLOW_REPORT.md  INVESTIGATION_REPORT.md  PLAN.md
docs/claude/review/: code-review-report.md
docs/gemini/plans/: architecture_and_testing_improvement_plan.md  tui_improvement_plan.md
docs/gemini/review/: code-review-report.md
docs/gemini/tests/: test_results.xml
docs/tests/: failure_report.md
examples/: ib_config.json  ib_connection.py  test_ib_connection.py  test_ib_gateway.py
examples/app/: run.py
examples/e2e/binance/: e2e_test.py
examples/e2e/crypto/: README.md  e2e_test.py
examples/integration/app/: run_tui.py
examples/integration/binance/: README.md  e2e_test.py
examples/integration/crypto/: e2e_test.py
foxtrot/adapter/: base_adapter.py
foxtrot/adapter/binance/: README.md  __init__.py  account_manager.py  adapter.py  api_client.py  binance.py  binance_mappings.py  contract_manager.py  error_handler.py  historical_data.py  market_data.py  order_manager.py  websocket_manager.py
foxtrot/adapter/crypto/: __init__.py  account_manager.py  account_object.py  crypto_adapter.py  crypto_mappings.py  market_data.py  order_manager.py
foxtrot/adapter/futu/: README.md  __init__.py  account_manager.py  api_client.py  contract_manager.py  futu.py  futu_callbacks.py  futu_mappings.py  historical_data.py  market_data.py  order_manager.py
foxtrot/adapter/ibrokers/: README.md  __init__.py  account_manager.py  adapter.py  api_client.py  contract_manager.py  historical_data.py  ib_mappings.py  ibrokers.py  ibrokers_legacy.py  market_data.py  order_manager.py
foxtrot/app/: app.py
foxtrot/app/tui/: __init__.py  async_bridge.py  main_app.py  main_minimal.py  main_simple.py  security.py
foxtrot/app/ui/: WIDGET_SPLIT_PLAN.md  __init__.py  mainwindow.py  qt.py  widget.py
foxtrot/core/: common.py  di_container.py  event.py  event_engine.py  interfaces.py
foxtrot/server/: adapter_manager.py  app_manager.py  database.py  datafeed.py  email_engine.py  engine.py  engine_manager.py  log_engine.py  oms_data_store.py  oms_engine.py
foxtrot/tools/: README.md  __init__.py  config.py  enhanced_tester.py  ib_tester.py  utils.py
foxtrot/util/: account_objects.py  advanced_indicators.py  array_manager.py  array_manager_indicators.py  bar_generator.py  base_array_manager.py  base_bar_generator.py  base_objects.py  constants.py  converter.py  decorators.py  event_type.py  file_utils.py  indicators.py  logger.py  market_objects.py  math_utils.py  object.py  request_objects.py  settings.py  trading_objects.py  utility.py  websocket_monitor.py  websocket_utils.py  window_bar_generator.py
scripts/: foxtrot-tui  run_foxtrot_tui.py  test_ib.py  validate_logging_migration.py  validate_test_imports.py
scripts/archive/: add_test_timeouts.py  validate_test_improvements.py
tests/: conftest.py
tests/benchmarks/: test_websocket_performance.py
tests/e2e/: README.md  __init__.py  test_binance_mainengine_e2e.py
tests/fixtures/: __init__.py  market_data.py  mock_adapter.py  test_infrastructure.py
tests/integration/: test_futu_mainengine_integration.py  test_futu_phase2.py  test_tui_integration.py  test_tui_trading_integration.py
tests/integration/server/: test_main_engine_integration.py
tests/mocks/: mock_event_handlers.py
tests/unit/adapter/: __init__.py
tests/unit/core/: test_di_container.py  test_event_engine_basic.py  test_event_engine_performance.py  test_event_engine_thread_safety.py  test_event_engine_unit.py
(+215 files in other folders)
